Aggiornato il contenuto della pagina About

--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
 
         <img src="images/Firefly un cappello, spaziale in versione umana 36084.jpg" alt="Immagine che rappresenta Nik Tesla AI">
 
-        <p>Welcome to my digital space! My name is Vincenzo and I am a passionate explorer of the tech world: through masterclasses and courses - from ‘Masterclasses Fundamentals of Python Language’ (Epicode) to ‘Introduction to ChatGPT’ (OpenAI Academy), from ‘Understanding Machine Learning’ (Google Italia) to ‘Generative AI’ (Google Cloud) - I am honing my skills in Python, Large Language Models, Responsible AI, Enhanced Productivity and much more, day after day.</p>
+        <p>Welcome to my digital space! My name is Vincent and I am a passionate explorer of the tech world: through masterclasses and courses - from ‘Masterclasses Fundamentals of Python Language’ (Epicode) to ‘Introduction to ChatGPT’ (OpenAI Academy), from ‘Understanding Machine Learning’ (Google Italia) to ‘Generative AI’ (Google Cloud) - I am honing my skills in Python, Large Language Models, Responsible AI, Enhanced Productivity and much more, day after day.</p>
 
         <p>Although I don't yet hold formal professional titles, each badge I obtain represents a piece of my continuous learning journey. This site is the laboratory where I test ideas and prototype advanced features, sharing with you demos, practical examples and insights on how artificial intelligence can revolutionise processes and creativity.</p>
 
