Aggiornato il contenuto della pagina About

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
     </div>
 
     <div class="page-content">
-        <h1>Chi Sono</h1>
+        <h1>About</h1>
 
         <img src="images/Firefly un cappello, spaziale in versione umana 36084.jpg" alt="Immagine che rappresenta Nik Tesla AI">
 
