--- a/about.html
+++ b/about.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"> <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Nik Tesla AI</title>
@@ -17,7 +16,7 @@
             /* Responsività e dimensioni */
             max-width: 800px; /* Larghezza massima del contenuto */
             width: 90%; /* Larghezza responsive */
-            margin: 80px auto 20px auto; /* Centra orizzontalmente, aggiunge spazio dall'alto */ 
+            margin: 80px auto 20px auto; /* Centra orizzontalmente, aggiunge spazio dall'alto */
 
             /* Aspetto visivo */
             background-color: rgba(20, 20, 30, 0.8);
@@ -76,17 +75,13 @@
         <a href="index.html" class="nav-button">HOME</a>
         <a href="about.html" class="nav-button">ABOUT</a>
         <a href="future.html" class="nav-button">FUTURE</a>
-        <a href="podcast.html" class="nav-button">PODCAST</a>
+        <a href="Space_invaders.html" class="nav-button">INVADERS</a> <a href="podcast.html" class="nav-button">PODCAST</a>
         <a href="badge.html" class="nav-button">BADGE</a>
         <a href="contact.html" class="nav-button">CONTACT</a>
     </div>
 
     <div class="page-content">
-        <h1>About</h1>
-
-        <img src="images/Firefly un cappello, spaziale in versione umana 36084.jpg" alt="Immagine che rappresenta Nik Tesla AI">
-
-        <p>Welcome to my digital space! My name is Vincent and I am a passionate explorer of the tech world: through masterclasses and courses - from ‘Masterclasses Fundamentals of Python Language’ (Epicode) to ‘Introduction to ChatGPT’ (OpenAI Academy), from ‘Understanding Machine Learning’ (Google Italia) to ‘Generative AI’ (Google Cloud) - I am honing my skills in Python, Large Language Models, Responsible AI, Enhanced Productivity and much more, day after day.</p>
+        <h1>Who I Am</h1> <img src="images/Firefly un cappello, spaziale in versione umana 36084.jpg" alt="Image representing Nik Tesla AI"> <p>Welcome to my digital space! My name is Vincenzo and I am a passionate explorer of the tech world: through masterclasses and courses - from ‘Masterclasses Fundamentals of Python Language’ (Epicode) to ‘Introduction to ChatGPT’ (OpenAI Academy), from ‘Understanding Machine Learning’ (Google Italia) to ‘Generative AI’ (Google Cloud) - I am honing my skills in Python, Large Language Models, Responsible AI, Enhanced Productivity and much more, day after day.</p>
 
         <p>Although I don't yet hold formal professional titles, each badge I obtain represents a piece of my continuous learning journey. This site is the laboratory where I test ideas and prototype advanced features, sharing with you demos, practical examples and insights on how artificial intelligence can revolutionise processes and creativity.</p>
 
