--- a/future.html
+++ b/future.html
@@ -2,7 +2,8 @@
 <html lang="en"> <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Future - Nik Tesla AI</title> <link rel="stylesheet" href="style.css">
+    <title>Future - Nik Tesla AI</title>
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.2/p5.js"></script>
     <script src="sketch.js"></script>
     <style>
@@ -130,7 +131,8 @@
         <a href="index.html" class="nav-button">HOME</a>
         <a href="about.html" class="nav-button">ABOUT</a>
         <a href="future.html" class="nav-button">FUTURE</a>
-        <a href="podcast.html" class="nav-button">PODCAST</a> <a href="badge.html" class="nav-button">BADGE</a>
+        <a href="Space_invaders.html" class="nav-button">INVADERS</a> <a href="podcast.html" class="nav-button">PODCAST</a>
+        <a href="badge.html" class="nav-button">BADGE</a>
         <a href="contact.html" class="nav-button">CONTACT</a>
     </div>
 
@@ -209,7 +211,7 @@
                             } else if (data.sentiment === 'negative') {
                                 displayResult = 'Sentiment: Negative 😠'; // Mostra in inglese
                                 resultColor = 'salmon';
-                            } else { // Neutral
+                            } else { // Neutro
                                 displayResult = 'Sentiment: Neutral 😐'; // Mostra in inglese
                                 resultColor = 'lightblue';
                             }
