--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a href="index.html" class="nav-button">HOME</a>
       <a href="about.html" class="nav-button">ABOUT</a>
       <a href="future.html" class="nav-button">FUTURE</a>
-      <a href="podcast.html" class="nav-button">PODCAST</a>
+      <a href="Space_invaders.html" class="nav-button">INVADERS</a> <a href="podcast.html" class="nav-button">PODCAST</a>
       <a href="badge.html" class="nav-button">BADGE</a>
       <a href="contact.html" class="nav-button">CONTACT</a>
   </div>
@@ -31,7 +31,7 @@
         // Usiamo window.location.origin per ottenere la parte base dell'URL
         // della pagina corrente (es. https://[deployment-id].vercel.app o https://tuo-domino.com)
         // e aggiungiamo il percorso corretto alla tua API.
-        const API_ENDPOINT_PATH = '/api/ask-ai'; // <--- CORRETTO: Deve corrispondere al nome della tua funzione serverless
+        const API_ENDPOINT_PATH = '/api/ask-ai'; // <--- Assicurati che questo percorso sia corretto per la tua API AI
         const AI_API_URL = window.location.origin + API_ENDPOINT_PATH;
 
         console.log("AI API URL being called:", AI_API_URL); // Aggiunto log per debug
@@ -83,7 +83,6 @@
 
             } catch (error) {
                 console.error('Error communicating with AI service:', error);
-                // Messaggio di errore più dettagliato
                 aiResponseDiv.textContent = `Error: ${error.message || 'Could not get a response from the AI.'}`; // Messaggio in inglese
                 aiResponseDiv.style.color = 'red'; // Colore per errori
             } finally {
