Aggiunto contenuto player podcast alla pagina Podcast e menu aggiornato

--- a/podcast.html
+++ b/podcast.html
@@ -94,7 +94,7 @@
         <a href="index.html" class="nav-button">HOME</a>
         <a href="about.html" class="nav-button">ABOUT</a>
         <a href="future.html" class="nav-button">FUTURE</a>
-        <a href="Space_invaders.html" class="nav-button">INVADERS</a> {/* NUOVO PULSANTE INVADERS */}
+        <a href="Space_invaders.html" class="nav-button">INVADERS</a>
         <a href="podcast.html" class="nav-button">PODCAST</a>
         <a href="badge.html" class="nav-button">BADGE</a>
         <a href="contact.html" class="nav-button">CONTACT</a>
@@ -112,7 +112,6 @@
         </div>
     </div>
 
-    {/* NOTA: Lo script sketch.js è incluso nella head e gestisce l'animazione */}
 
 </body>
 </html>
