Rimossi commenti non validi dalla pagina badge.html

--- a/badge.html
+++ b/badge.html
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
-<html lang="en"> {/* Lingua impostata su italiano */}
-<head>
+<html lang="it"> <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Badge - Nik Tesla AI</title> {/* Titolo della pagina */}
-    {/* Inclusione del file CSS comune per gli stili generali */}
-    <link rel="stylesheet" href="style.css"> {/* Assicurati che style.css sia collegato correttamente */}
-    {/* Inclusione della libreria p5.js per l'animazione di sfondo */}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.2/p5.js"></script> {/* Script per l'animazione di sfondo */}
-    <script src="sketch.js"></script> {/* Script per l'animazione di sfondo e logiche AI */}
-    <style>
+    <title>Badge - Nik Tesla AI</title> <link rel="stylesheet" href="style.css"> <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.2/p5.js"></script> <script src="sketch.js"></script> <style>
         /* Stili specifici solo per la pagina Badge */
         /* Applica stili simili a .page-content per il contenitore principale del contenuto */
         .page-content {
@@ -55,7 +48,6 @@
     </style>
 </head>
 <body>
-    {/* Blocco HTML del Menu di Navigazione */}
     <div class="button-container">
         <a href="index.html" class="nav-button">HOME</a>
         <a href="about.html" class="nav-button">ABOUT</a>
@@ -65,13 +57,8 @@
         <a href="contact.html" class="nav-button">CONTACT</a>
     </div>
 
-    {/* Il canvas per l'animazione di sfondo verrà creato qui da sketch.js */}
-
-    {/* Contenuto specifico della pagina Badge */}
     <div class="page-content">
-        <h1>My Badges</h1>
-
-    </div>
+        <h1>My Badges</h1> </div>
 
 </body>
 </html>
