Aggiornata pagina index

--- a/index.html
+++ b/index.html
@@ -92,5 +92,10 @@
     });
   </script>
 
+  <!-- Zapier Chatbot Integration START -->
+  <script async type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
+  <zapier-interfaces-chatbot-embed is-popup='true' chatbot-id='cmaqmyv4c001i11b886npa6i8'></zapier-interfaces-chatbot-embed>
+  <!-- Zapier Chatbot Integration END -->
+
 </body>
 </html>
