Pagina badge con solo titolo e immagine centrale

--- a/badge.html
+++ b/badge.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it"> <head>
+<html lang="en"> <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Badge - Nik Tesla AI</title> <link rel="stylesheet" href="style.css"> <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.2/p5.js"></script> <script src="sketch.js"></script> <style>
