Pagina badge con solo titolo e immagine centrale

--- a/badge.html
+++ b/badge.html
@@ -21,7 +21,7 @@
             border-radius: 8px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
             color: #fff;
-            text-align: center; /* Centra il titolo e il contenuto interno come l'immagine */
+            text-align: center; /* Centra il titolo e il contenuto interno come le immagini */
         }
 
         .page-content h1 {
@@ -31,11 +31,11 @@
             margin-bottom: 30px; /* Spazio sotto il titolo */
         }
 
-        /* Stile per centrare l'immagine */
+        /* Stile per centrare le immagini e aggiungere un po' di spazio sotto */
         .page-content img {
-            display: block; /* L'immagine diventa un elemento a blocco */
-            margin: 0 auto; /* I margini auto centrano l'elemento a blocco */
-            max-width: 100%; /* Rende l'immagine responsive */
+            display: block; /* Le immagini diventano elementi a blocco */
+            margin: 0 auto 20px auto; /* Margini auto centrano, 20px sotto ogni immagine */
+            max-width: 100%; /* Rende le immagini responsive */
             height: auto;
         }
 
@@ -49,6 +49,9 @@
             }
              .page-content h1 {
                 font-size: 1.8em; /* Riduci dimensione titolo */
+            }
+             .page-content img {
+                margin-bottom: 15px; /* Riduci spazio sotto le immagini su schermi piccoli */
             }
         }
 
@@ -66,7 +69,11 @@
 
     <div class="page-content">
         <h1>My Badges</h1>
-        <img src="images/badge.JPG" alt="Badge Image">
+        <img src="images/badge.JPG" alt="Badge Image 1">
+        <img src="images/assistenti.JPG" alt="Badge Image 2">
+        <img src="images/formatore.JPG" alt="Badge Image 3">
+        <img src="images/intelligenza.JPG" alt="Badge Image 4">
+        <img src="images/introduzione.JPG" alt="Badge Image 5">
     </div>
 
 </body>
